<resources>
    <string name="app_name">QB365</string>
    <string name="practice">Practice</string>
    <string name="email_id">Email Id</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="enter_your_register_mobile_no">Enter your register mobile no.</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_4_digit_code_here">Enter 6 digit code here</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="name">Name</string>
    <string name="referral_code_if_any_students">Referral code, if any(Students)</string>
    <string name="referral_code_if_any_staff">Referral code, if any(Staff)</string>
    <string name="school_name">School Name</string>
    <string name="address">Address</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="continue_">Continue</string>
    <string name="i_am_preparing_for">I am Preparing for</string>
    <string name="please_select_your_board">Please select your board</string>
    <string name="loading">Loading..</string>
    <string name="please_select_your_standard">Please select your Standard</string>
    <string name="please_select_your_purchase_type">Please select your purchase type</string>
    <string name="enter_your_10_digit_mobile_number">Enter Your 10 Digit Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_select_your_subjects">Please select your Subjects</string>
    <string name="please_select_chapters">Please select Chapters</string>
    <string name="search_for_question_and_answer">Search for Question and answer</string>
    <string name="upcoming_tests">Upcoming tests</string>
    <string name="my_test_packs">My Test Packs</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="share_text">Refer your friends to score high marks learning via QB365 App</string>
    <string name="refer_now">Refer Now</string>
    <string name="choose_your_questions_type">Choose Your Questions Type</string>
    <string name="subject_based_test">Subject Based Test</string>
    <string name="chapter_based_test">Chapter Based Test</string>
    <string name="questions">Questions</string>
    <string name="minutes">Minutes</string>
    <string name="instructions">Instructions</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="upgrade_your_plan">Upgrade Your Plan</string>
    <string name="for_you">For you</string>
    <string name="write_test">Write Test</string>
    <string name="practice_mode">Practice Mode</string>
    <string name="report">Report</string>
    <string name="invite_and_earn">Invite and Earn</string>
    <string name="myorders">MyOrders</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="update">Update</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Re-Enter New Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_us">Call Us</string>
    <string name="qb_phone_number">+91 84286 46000</string>
    <string name="qb_wp_number">+91 84286 46000</string>
    <string name="phone">Phone</string>
    <string name="finish">Finish</string>
    <string name="dummy_question">Lorem ipsum dolor sit amet, consectetur adipi-scing elit. Tristique facilisis euismod euismod mole stie.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_are_done">You are done!</string>
    <string name="test_report">Test Report</string>
    <string name="correct_answer">Correct\nAnswer</string>
    <string name="wrong_answer">Wrong\nAnswer</string>
    <string name="skipped_answer">Skipped Questions</string>
    <string name="view_solution">View Solution</string>
    <string name="answer_status">Answer Status</string>
    <string name="take_a_test_see_where_you_stand">Take a test see where you Stand</string>
    <string name="tests">Tests</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="skipped">Skipped</string>
    <string name="your_cash_will_be_used_while_your_next_purchase">Your Cash will be used while your next Purchase</string>
    <string name="get_50_inr_for_each_referals_signup">GET <b>50 INR</b> for each Referrals Signup</string>
    <string name="plan1_price_strike"> <strike>2500 INR</strike> </string>
    <string name="plan2_price_strike"> <strike>3500 INR</strike> </string>
    <string name="plan3_price_strike"> <strike>5500 INR</strike> </string>
    <string name="subject_based_test_reports">Subject Based Test Reports</string>
    <string name="chapter_based_test_reports">Chapter Based Test Reports</string>
    <string name="select_attempt">Select Attempt</string>
    <string name="select_test">Select Test</string>
    <string name="solution">Solution</string>
    <string name="attempts">Attempts</string>
</resources>