<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".ui.dashboard.NavigationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_curve_view"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_user_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/tvStd"
                app:layout_constraintStart_toEndOf="@+id/ivProfile"
                app:layout_constraintTop_toTopOf="@+id/ivProfile"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Denis John" />

            <TextView
                android:id="@+id/tvStd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
                app:layout_constraintStart_toStartOf="@+id/tvUserName"
                app:layout_constraintTop_toBottomOf="@+id/tvUserName"
                tools:text="12th Standard CBSE" />

            <ImageView
                android:id="@+id/ivBell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivProfile"
                app:srcCompat="@drawable/bell_icon_selector" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tvEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:textSize="13sp"
                app:cornerRadius="20dp"
                app:backgroundTint="@color/mainPurple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ivProfile"
                app:layout_constraintTop_toBottomOf="@id/ivProfile" />

            <TextView
                android:id="@+id/tvValidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="@+id/tvEditProfile"
                app:layout_constraintStart_toEndOf="@+id/tvEditProfile"
                app:layout_constraintTop_toTopOf="@+id/tvEditProfile"
                tools:text="Validity : 44 days" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close"
                app:tint="@color/mainPurple" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/clTop">

            <TextView
                android:id="@+id/tvDashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_dashboard"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/dashboard"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/tvUpgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_upgrade"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/upgrade_your_plan"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvForYou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_foryou"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/for_you"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvWriteTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_write_test"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/write_test"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvPractice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_practise_mode"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/practice_mode"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_report"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/report"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvInvite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_invite_earn"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/invite_and_earn"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvMyOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_order"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/myorders"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_change_password"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/change_password"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_contact"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="Contact Us"
                android:textColor="@color/black" />


        </LinearLayout>


        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="15dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="15dp"
            android:text="@string/logout"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/llOption" />


        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:drawablePadding="15dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="8dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/mainPurple"
            app:layout_constraintTop_toBottomOf="@id/tvLogout" />


        <TextView
            android:id="@+id/tvTermsConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:drawablePadding="15dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="8dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/mainPurple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrivacyPolicy" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>